introduced interface for field information